--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
  <distributionManagement>
     <snapshotRepository>
       <id>maven-snapshots</id>
-      <url>http://ec2-13-126-44-10.ap-south-1.compute.amazonaws.com:8081/repository/maven-snapshots/</url>
+      <url>http://65.0.19.237:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
  </distributionManagement>
 </project>
